# corelib

./: Cargo.toml
examples/: main.rs
src/: errors.rs  lib.rs
src/common/: messages.rs  mod.rs  types.rs  utils.rs
src/scenarios/: mod.rs
