[package]
name = "corelib"
version = "0.1.0"
authors = ["Aler Denisov <aler.zampillo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features = ["ec_secp256k1"]

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.2.5"

[dependencies]
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.3"}
serde = { version = "1.0", features = ["derive"] }
rust-crypto = { git = "https://github.com/alerdenisov/rust-crypto", branch = "aarch64" }
futures = "0.3.1"
derive_more = "0.99.3"
